# static-host

./: .gitignore  Cargo.toml  README.md
src/: main.rs
